; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-ls-scfg-msi.c_ls_scfg_msi_teardown_hwirq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-ls-scfg-msi.c_ls_scfg_msi_teardown_hwirq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ls_scfg_msir = type { i64, i32, %struct.ls_scfg_msi* }
%struct.ls_scfg_msi = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ls_scfg_msir*)* @ls_scfg_msi_teardown_hwirq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ls_scfg_msi_teardown_hwirq(%struct.ls_scfg_msir* %0) #0 {
  %2 = alloca %struct.ls_scfg_msir*, align 8
  %3 = alloca %struct.ls_scfg_msi*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ls_scfg_msir* %0, %struct.ls_scfg_msir** %2, align 8
  %6 = load %struct.ls_scfg_msir*, %struct.ls_scfg_msir** %2, align 8
  %7 = getelementptr inbounds %struct.ls_scfg_msir, %struct.ls_scfg_msir* %6, i32 0, i32 2
  %8 = load %struct.ls_scfg_msi*, %struct.ls_scfg_msi** %7, align 8
  store %struct.ls_scfg_msi* %8, %struct.ls_scfg_msi** %3, align 8
  %9 = load %struct.ls_scfg_msir*, %struct.ls_scfg_msir** %2, align 8
  %10 = getelementptr inbounds %struct.ls_scfg_msir, %struct.ls_scfg_msir* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.ls_scfg_msir*, %struct.ls_scfg_msir** %2, align 8
  %15 = getelementptr inbounds %struct.ls_scfg_msir, %struct.ls_scfg_msir* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @irq_set_chained_handler_and_data(i64 %16, i32* null, i32* null)
  br label %18

18:                                               ; preds = %13, %1
  store i32 0, i32* %4, align 4
  br label %19

19:                                               ; preds = %44, %18
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.ls_scfg_msi*, %struct.ls_scfg_msi** %3, align 8
  %22 = getelementptr inbounds %struct.ls_scfg_msi, %struct.ls_scfg_msi* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp slt i32 %20, %25
  br i1 %26, label %27, label %47

27:                                               ; preds = %19
  %28 = load i32, i32* %4, align 4
  %29 = load %struct.ls_scfg_msi*, %struct.ls_scfg_msi** %3, align 8
  %30 = getelementptr inbounds %struct.ls_scfg_msi, %struct.ls_scfg_msi* %29, i32 0, i32 1
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = shl i32 %28, %33
  %35 = load %struct.ls_scfg_msir*, %struct.ls_scfg_msir** %2, align 8
  %36 = getelementptr inbounds %struct.ls_scfg_msir, %struct.ls_scfg_msir* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = or i32 %34, %37
  store i32 %38, i32* %5, align 4
  %39 = load %struct.ls_scfg_msi*, %struct.ls_scfg_msi** %3, align 8
  %40 = getelementptr inbounds %struct.ls_scfg_msi, %struct.ls_scfg_msi* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @bitmap_set(i32 %41, i32 %42, i32 1)
  br label %44

44:                                               ; preds = %27
  %45 = load i32, i32* %4, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %4, align 4
  br label %19

47:                                               ; preds = %19
  ret i32 0
}

declare dso_local i32 @irq_set_chained_handler_and_data(i64, i32*, i32*) #1

declare dso_local i32 @bitmap_set(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
